Add tags to theme

--- a/content/2015-07-15-code.md
+++ b/content/2015-07-15-code.md
@@ -3,6 +3,8 @@ title = "A post with code"
 date = "2015-07-15 15:09:00"
 description = "an example of a blog post with some code"
 authors = ["Everett Robinson"]
+[taxonomies]
+tags = ["code"]
 [extra]
 layout = "post"
 +++
