--- a/content/2015-05-15-images.md
+++ b/content/2015-05-15-images.md
@@ -3,6 +3,8 @@ title =  "A post with images"
 date = "2015-05-15 21:01:00"
 description = "this is what included images could look like"
 authors = ["Everett Robinson"]
+[taxonomies]
+tags = ["photography", "formatting"]
 [extra]
 layout = "post"
 +++
