No underscores in CSS and improve some class names

--- a/content/2024-05-15-images.md
+++ b/content/2024-05-15-images.md
@@ -7,24 +7,23 @@ authors = ["Everett Robinson"]
 tags = ["photography", "formatting"]
 +++
 
-You can easily mix in html with markdown, allowing for great control over the layout of the post. This is especially powerful when images are involved! Use the CSS classes "img_row", "col one", "col two", and "col three" to control how wide an image will be:
+You can easily mix in html with markdown, allowing for great control over the layout of the post. This is especially powerful when images are involved! Use the CSS classes "row", "col one-third-width", "col half-width" "col two-thirds-width", and "col full-width" to control how wide an image will be:
 
-<div class="img_row">
-	<img loading="lazy" class="col three" src="/img/1.jpg">
+<div class="row">
+	<img loading="lazy" class="col full-width" src="/img/1.jpg">
 </div>
-<div class="col three caption">
+<div class="col full-width caption">
 	A simple, elegant caption looks good between image rows, after each row, or doesn't have to be there at all. 
 </div>
-<div class="img_row">
-	<img loading="lazy" class="col two" src="/img/2.jpg">
-	<img loading="lazy" class="col one" src="/img/4.jpg">
+<div class="row">
+	<img loading="lazy" class="col two-thirds-width" src="/img/2.jpg">
+	<img loading="lazy" class="col one-third-width" src="/img/4.jpg">
 </div>
 
 Intersperse your images with moving prose to inspire the reader, and take them along on a journey. The possibilities are endless thanks to the expressive power of HTML, CSS, and the hackability of zola!
 
-
-<div class="img_row">
-	<img loading="lazy" class="col one" src="/img/5.jpg">
-	<img loading="lazy" class="col one" src="/img/6.jpg">
-	<img loading="lazy" class="col one" src="/img/3.jpg">
+<div class="row">
+	<img loading="lazy" class="col one-third-width" src="/img/5.jpg">
+	<img loading="lazy" class="col one-third-width" src="/img/6.jpg">
+	<img loading="lazy" class="col one-third-width" src="/img/3.jpg">
 </div>
